@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.seren" version="0.2.8" name="Seren" provider-name="Nixgates">
+<addon id="plugin.video.seren" version="0.2.11" name="Seren" provider-name="Nixgates">
 	<requires>
 		<import addon="xbmc.python" version="2.19.0" />
 		<import addon="script.module.requests" version="2.19.1" />
@@ -7,7 +7,6 @@
 		<import addon="script.module.metahandler" version="1.0.0" />
 		<import addon="plugin.video.youtube" version="6.2.0"/>
 		<import addon="script.module.addon.signals" version="0.0.1"/>
-		<import addon="context.seren" version="0.8"/>
 	</requires>
 	<extension point="xbmc.python.pluginsource" library="seren.py">
 		<provides>video</provides>
@@ -28,11 +27,22 @@
 			<fanart>temp-fanart.png</fanart>
 		</assets>
 		<news>
+Changelog 0.2.11:
+Fixed Playable flag for mixedEpisodeList
+Fixed Context menu not showing on mixed episode lists
+
+Changelog 0.2.10:
+Fixed issue with incorrect episode playing.
+
+Changelog 0.2.9:
+Added try except for AttributeError on getTorrents/getHoster functions to account for change of variable type
+Fixed Attribute Issue causing cache assist to fail
+Re-added smartplay workaround (fixes playback failed message even when playback was successful)
+
 Changelog 0.2.8:
 Fixed issue with getDebridDuplicates sources crashing getSources Module
 Fixed Pre-emptive termination
 Fixed extra information crashing trakt sync
-Reduced number of threads for initial sync to lessen imapct on device
 
 Changelog 0.2.7:
 Fixed filter function naming
